--- a/rag.ipynb
+++ b/rag.ipynb
@@ -191,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
