--- a/rag2.ipynb
+++ b/rag2.ipynb
@@ -137,27 +137,23 @@
     "        return documents\n",
     "    \n",
     "    def _extract_text_from_json(self, json_obj) -> str:\n",
-    "        \"\"\"从 JSON 对象中提取文本内容\"\"\"\n",
-    "        if isinstance(json_obj, str):\n",
+    "        \"\"\"从 JSON 对象中提取文本内容，只保留同时包含 question 和 answer 字段的数据\"\"\"\n",
+    "        if isinstance(json_obj, dict):\n",
+    "            # 只处理同时包含 question 和 answer 字段的情况\n",
+    "            question = json_obj.get('question', '')\n",
+    "            answer = json_obj.get('answer', '')\n",
+    "            \n",
+    "            if question and answer:\n",
+    "                return f\"问题：{question}\\n答案：{answer}\"\n",
+    "            else:\n",
+    "                # 如果不同时包含两个字段，返回空字符串，这样文档会被跳过\n",
+    "                return \"\"\n",
+    "        elif isinstance(json_obj, str):\n",
+    "            # 如果是字符串，直接返回\n",
     "            return json_obj\n",
-    "        elif isinstance(json_obj, dict):\n",
-    "            # 常见的文本字段名\n",
-    "            text_fields = ['instruction', 'question', 'answer']\n",
-    "            \n",
-    "            # 优先查找常见文本字段\n",
-    "            for field in text_fields:\n",
-    "                if field in json_obj and json_obj[field]:\n",
-    "                    return str(json_obj[field])\n",
-    "            \n",
-    "            # 如果没有找到，将所有值连接起来\n",
-    "            text_parts = []\n",
-    "            for key, value in json_obj.items():\n",
-    "                if isinstance(value, (str, int, float)) and str(value).strip():\n",
-    "                    text_parts.append(f\"{key}: {value}\")\n",
-    "            \n",
-    "            return \"\\n\".join(text_parts)\n",
     "        else:\n",
-    "            return str(json_obj)\n",
+    "            # 其他类型返回空字符串\n",
+    "            return \"\"\n",
     "    \n",
     "    def setup_rag_system(self, similarity_top_k=10, rerank_top_n=5):\n",
     "        \"\"\"设置 RAG 系统\"\"\"\n",
@@ -205,7 +201,7 @@
     "        \n",
     "        print(\"RAG system setup complete!\")\n",
     "    \n",
-    "    def get_relevant_context(self, question: str, max_context_length=2000) -> str:\n",
+    "    def get_relevant_context(self, question: str, max_context_length=4096) -> str:\n",
     "        \"\"\"获取相关上下文\"\"\"\n",
     "        try:\n",
     "            # 使用查询引擎检索相关信息\n",
@@ -320,12 +316,7 @@
     "                \n",
     "                # 清理答案格式\n",
     "                content = content.strip().upper()\n",
-    "                # if len(content) > 1:\n",
-    "                #     # 提取第一个有效的选项字母\n",
-    "                #     for char in content:\n",
-    "                #         if char in ['A', 'B', 'C', 'D']:\n",
-    "                #             content = char\n",
-    "                #             break\n",
+    "\n",
     "                \n",
     "                if str(content) == str(df[\"output\"][i]):\n",
     "                    acc += 1\n",
