--- a/rag2.ipynb
+++ b/rag2.ipynb
@@ -473,7 +473,9 @@
   {
    "cell_type": "markdown",
    "id": "054bf21a-291a-4a29-8e0f-1b418b5b218c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### total model"
    ]
